第二次提交

--- a/clientservice-dev.properties
+++ b/clientservice-dev.properties
@@ -1,3 +1,4 @@
+application.profile = dev
 #阿里连接池配置
 #spring.datasource.druid.driver-class-name=oracle.jdbc.driver.OracleDriver  #可配可不配，阿里的数据库连接池会通过url自动搜寻
 spring.datasource.druid.url=jdbc:mysql://localhost:3306/szqy07
